k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: healthlife
  labels:
    app.kubernetes.io/part-of: healthlife
